[gd_scene format=3 uid="uid://cwek83s4036ic"]

[ext_resource type="Script" uid="uid://cy7il3cu1b0cp" path="res://vault_screen.gd" id="1_24rf1"]
[ext_resource type="Texture2D" uid="uid://d6mjr4byupf3" path="res://icons/logo.svg" id="2_f6coe"]
[ext_resource type="Texture2D" uid="uid://c5hdedqxcdo7f" path="res://icons/logo-hole.svg" id="3_8yhsy"]
[ext_resource type="Texture2D" uid="uid://d1odhvtjhqdlm" path="res://icons/plus.svg" id="4_jm6fk"]
[ext_resource type="Texture2D" uid="uid://dt4ubeg3ikmfd" path="res://icons/settings.svg" id="4_l4fpi"]
[ext_resource type="PackedScene" uid="uid://ohekncr6mj6b" path="res://components/vault_chip.tscn" id="5_24rf1"]
[ext_resource type="PackedScene" uid="uid://dlvpgaeknnn70" path="res://components/vault_entry.tscn" id="6_8yhsy"]
[ext_resource type="Shader" uid="uid://c116cf6fjsftq" path="res://shaders/blur.gdshader" id="6_l4fpi"]
[ext_resource type="PackedScene" uid="uid://cg82ihc40n24h" path="res://components/auth_panel.tscn" id="7_6xhj2"]
[ext_resource type="PackedScene" uid="uid://dnmf8fdoa0ssm" path="res://components/new_entry_panel.tscn" id="8_xr618"]
[ext_resource type="PackedScene" uid="uid://djac3y52eodm" path="res://components/new_vault_panel.tscn" id="9_f6coe"]
[ext_resource type="PackedScene" uid="uid://dhqemr5xv2lh3" path="res://components/edit_entry_panel.tscn" id="10_jm6fk"]
[ext_resource type="PackedScene" uid="uid://clgs37fgilp84" path="res://components/delete_confirmation.tscn" id="11_lm4gx"]
[ext_resource type="PackedScene" uid="uid://pff1mtanhrck" path="res://components/edit_vault_panel.tscn" id="14_6xhj2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8yhsy"]
shader = ExtResource("6_l4fpi")
shader_parameter/blur_amount = 2.0
shader_parameter/blur_quality = 3
shader_parameter/dither_strength = 0.1

[node name="Vault" type="Control" unique_id=440608926 node_paths=PackedStringArray("blur_container", "auth_panel", "new_entry_panel", "new_vault_panel", "edit_entry_panel", "edit_vault_panel", "delete_confirmation", "flow_container", "copied_toast", "vault_selector_hbox", "create_vault_button", "add_secret_button", "new_profile_chip", "logo_bg", "panels", "bg_blur", "zoom_tip")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_24rf1")
blur_container = NodePath("BlurContainer")
auth_panel = NodePath("BlurContainer/AuthPanelContainer/AuthPanel")
new_entry_panel = NodePath("BlurContainer/NewEntryPanelContainer/NewEntryPanel")
new_vault_panel = NodePath("BlurContainer/NewVaultPanelContainer/NewVaultPanel")
edit_entry_panel = NodePath("BlurContainer/EditEntryPanelContainer/EditEntryPanel")
edit_vault_panel = NodePath("BlurContainer/EditVaultPanelContainer/EditVaultPanel")
delete_confirmation = NodePath("BlurContainer/DeleteConfirmationPanelContainer/DeleteConfirmation")
flow_container = NodePath("VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/FlowContainer")
copied_toast = NodePath("CopiedToast")
vault_selector_hbox = NodePath("VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/ScrollContainer/VaultSelectorHbox")
create_vault_button = NodePath("VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/ScrollContainer/VaultSelectorHbox/CreateVaultButton")
add_secret_button = NodePath("VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/RHBox/AddSecretButton")
new_profile_chip = NodePath("VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/ScrollContainer/VaultSelectorHbox/NewProfileChip")
logo_bg = NodePath("VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/LHBox/LogoBG")
panels = [NodePath("BlurContainer/AuthPanelContainer/AuthPanel"), NodePath("BlurContainer/NewEntryPanelContainer/NewEntryPanel"), NodePath("BlurContainer/EditEntryPanelContainer/EditEntryPanel"), NodePath("BlurContainer/NewVaultPanelContainer/NewVaultPanel"), NodePath("BlurContainer/DeleteConfirmationPanelContainer/DeleteConfirmation"), NodePath("BlurContainer/EditVaultPanelContainer/EditVaultPanel")]
bg_blur = NodePath("BlurContainer/BGBlur")
zoom_tip = NodePath("VaultContainer/ZoomTip")

[node name="VaultContainer" type="Control" parent="." unique_id=1432826734]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VaultContainer" unique_id=283371797]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"BGPanel"

[node name="MarginContainer" type="MarginContainer" parent="VaultContainer/PanelContainer" unique_id=1699871104]
layout_mode = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VaultContainer/PanelContainer/MarginContainer" unique_id=1286845890]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer" unique_id=1388079694]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer" unique_id=1307521039]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" unique_id=357846364]
layout_mode = 2

[node name="LHBox" type="HBoxContainer" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=284143612]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LogoBG" type="TextureRect" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/LHBox" unique_id=619076213]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
texture = ExtResource("2_f6coe")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/LHBox/LogoBG" unique_id=171126637]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8yhsy")
expand_mode = 1

[node name="Control" type="Control" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/LHBox" unique_id=867113263]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/LHBox" unique_id=2114622795]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Keybox"

[node name="Control" type="Control" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=1669982435]
layout_mode = 2
size_flags_horizontal = 3

[node name="RHBox" type="HBoxContainer" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=885894217]
layout_mode = 2
theme_override_constants/separation = 8

[node name="EditVaultButton" type="Button" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/RHBox" unique_id=957713726]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"SecondaryButton"
theme_override_constants/h_separation = 8
theme_override_constants/icon_max_width = 18
theme_override_font_sizes/font_size = 15
text = "Edit Vault"
icon = ExtResource("4_l4fpi")

[node name="AddSecretButton" type="Button" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/RHBox" unique_id=1131095887]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"AccentButton"
theme_override_constants/icon_max_width = 18
theme_override_font_sizes/font_size = 15
text = "Add Entry"
icon = ExtResource("4_jm6fk")

[node name="HSeparator" type="HSeparator" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" unique_id=202896877]
layout_mode = 2
theme_override_constants/separation = 36

[node name="Control3" type="Control" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" unique_id=475348261]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" unique_id=1073311412]
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="VaultSelectorHbox" type="HBoxContainer" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/ScrollContainer" unique_id=374776243]
layout_mode = 2
theme_override_constants/separation = 12

[node name="NewProfileChip" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/ScrollContainer/VaultSelectorHbox" unique_id=220244992 instance=ExtResource("5_24rf1")]
layout_mode = 2
is_preview = true

[node name="CreateVaultButton" type="Button" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/ScrollContainer/VaultSelectorHbox" unique_id=2091243583]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"AccentHollowButton"
theme_override_constants/icon_max_width = 16
text = "New Vault"
icon = ExtResource("4_jm6fk")

[node name="Control2" type="Control" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" unique_id=225529159]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="SearchEdit" type="LineEdit" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" unique_id=323548366]
layout_mode = 2
theme_type_variation = &"LineEditSearch"
placeholder_text = "Search your vault..."
context_menu_enabled = false
emoji_menu_enabled = false

[node name="Control" type="Control" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" unique_id=1547291198]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="FlowContainer" type="FlowContainer" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" unique_id=1600529074]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 24

[node name="VaultEntry" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/FlowContainer" unique_id=1796737077 instance=ExtResource("6_8yhsy")]
layout_mode = 2
size_flags_horizontal = 3
obfuscated = true

[node name="VaultEntry2" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/FlowContainer" unique_id=1600595704 instance=ExtResource("6_8yhsy")]
layout_mode = 2
size_flags_horizontal = 3
obfuscated = true

[node name="VaultEntry3" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/FlowContainer" unique_id=1475549209 instance=ExtResource("6_8yhsy")]
layout_mode = 2
size_flags_horizontal = 3
obfuscated = true

[node name="VaultEntry4" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/FlowContainer" unique_id=107072321 instance=ExtResource("6_8yhsy")]
layout_mode = 2
size_flags_horizontal = 3
obfuscated = true

[node name="VaultEntry5" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/FlowContainer" unique_id=1593471769 instance=ExtResource("6_8yhsy")]
layout_mode = 2
size_flags_horizontal = 3
obfuscated = true

[node name="VaultEntry6" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/FlowContainer" unique_id=246312931 instance=ExtResource("6_8yhsy")]
layout_mode = 2
size_flags_horizontal = 3
obfuscated = true

[node name="VaultEntry7" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/FlowContainer" unique_id=1044842716 instance=ExtResource("6_8yhsy")]
layout_mode = 2
size_flags_horizontal = 3
obfuscated = true

[node name="VaultEntry8" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/FlowContainer" unique_id=693238952 instance=ExtResource("6_8yhsy")]
layout_mode = 2
size_flags_horizontal = 3
obfuscated = true

[node name="VaultEntry9" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/FlowContainer" unique_id=747573031 instance=ExtResource("6_8yhsy")]
layout_mode = 2
size_flags_horizontal = 3
obfuscated = true

[node name="VaultEntry10" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/FlowContainer" unique_id=1233810615 instance=ExtResource("6_8yhsy")]
layout_mode = 2
size_flags_horizontal = 3
obfuscated = true

[node name="VaultEntry11" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/FlowContainer" unique_id=1516556796 instance=ExtResource("6_8yhsy")]
layout_mode = 2
size_flags_horizontal = 3
obfuscated = true

[node name="VaultEntry12" parent="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/FlowContainer" unique_id=2141522083 instance=ExtResource("6_8yhsy")]
layout_mode = 2
size_flags_horizontal = 3
obfuscated = true

[node name="ZoomTip" type="Label" parent="VaultContainer" unique_id=1220775386]
visible = false
self_modulate = Color(1, 1, 1, 0.15686275)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -153.0
offset_top = -24.0
offset_right = 158.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_type_variation = &"LabelSecondary"
theme_override_font_sizes/font_size = 12
text = "You can use CTRL+ or CTRL- to zoom in/out."
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlurContainer" type="Control" parent="." unique_id=770378332]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="BGBlur" type="ColorRect" parent="BlurContainer" unique_id=499332118]
material = SubResource("ShaderMaterial_8yhsy")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AuthPanelContainer" type="CenterContainer" parent="BlurContainer" unique_id=664905842]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AuthPanel" parent="BlurContainer/AuthPanelContainer" unique_id=2056608960 instance=ExtResource("7_6xhj2")]
layout_mode = 2

[node name="NewEntryPanelContainer" type="CenterContainer" parent="BlurContainer" unique_id=199176223]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NewEntryPanel" parent="BlurContainer/NewEntryPanelContainer" unique_id=246932546 instance=ExtResource("8_xr618")]
visible = false
layout_mode = 2

[node name="EditEntryPanelContainer" type="CenterContainer" parent="BlurContainer" unique_id=853411875]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EditEntryPanel" parent="BlurContainer/EditEntryPanelContainer" unique_id=732141105 instance=ExtResource("10_jm6fk")]
visible = false
layout_mode = 2

[node name="DeleteConfirmationPanelContainer" type="CenterContainer" parent="BlurContainer" unique_id=774103078]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DeleteConfirmation" parent="BlurContainer/DeleteConfirmationPanelContainer" unique_id=1257494744 instance=ExtResource("11_lm4gx")]
visible = false
layout_mode = 2

[node name="NewVaultPanelContainer" type="CenterContainer" parent="BlurContainer" unique_id=855514996]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NewVaultPanel" parent="BlurContainer/NewVaultPanelContainer" unique_id=451550926 instance=ExtResource("9_f6coe")]
visible = false
layout_mode = 2

[node name="EditVaultPanelContainer" type="CenterContainer" parent="BlurContainer" unique_id=867276243]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EditVaultPanel" parent="BlurContainer/EditVaultPanelContainer" unique_id=921736813 instance=ExtResource("14_6xhj2")]
visible = false
layout_mode = 2

[node name="CopiedToast" type="PanelContainer" parent="." unique_id=893468467]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.5
offset_top = -148.0
offset_right = 92.5
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 0
theme_type_variation = &"Toast"

[node name="Label" type="Label" parent="CopiedToast" unique_id=1559565574]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Copied to Clipboard"
horizontal_alignment = 1

[connection signal="pressed" from="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/RHBox/EditVaultButton" to="." method="_on_edit_vault_button_pressed"]
[connection signal="pressed" from="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/RHBox/AddSecretButton" to="." method="_on_add_secret_button_pressed"]
[connection signal="pressed" from="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/ScrollContainer/VaultSelectorHbox/CreateVaultButton" to="." method="_on_create_vault_button_pressed"]
[connection signal="text_changed" from="VaultContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/SearchEdit" to="." method="_on_search_edit_text_changed"]
[connection signal="access_granted" from="BlurContainer/AuthPanelContainer/AuthPanel" to="." method="_on_auth_panel_access_granted"]
[connection signal="new_vault_name_changed" from="BlurContainer/AuthPanelContainer/AuthPanel" to="." method="_on_auth_panel_new_vault_name_changed"]
[connection signal="canceled" from="BlurContainer/NewEntryPanelContainer/NewEntryPanel" to="." method="_on_new_entry_panel_canceled"]
[connection signal="created" from="BlurContainer/NewEntryPanelContainer/NewEntryPanel" to="." method="_on_new_entry_panel_created"]
[connection signal="canceled" from="BlurContainer/EditEntryPanelContainer/EditEntryPanel" to="." method="_on_edit_entry_panel_canceled"]
[connection signal="edit_confirmed" from="BlurContainer/EditEntryPanelContainer/EditEntryPanel" to="." method="_on_edit_entry_panel_edit_confirmed"]
[connection signal="canceled" from="BlurContainer/DeleteConfirmationPanelContainer/DeleteConfirmation" to="." method="_on_delete_confirmation_canceled"]
[connection signal="delete_request" from="BlurContainer/DeleteConfirmationPanelContainer/DeleteConfirmation" to="." method="_on_delete_confirmation_delete_request"]
[connection signal="canceled" from="BlurContainer/NewVaultPanelContainer/NewVaultPanel" to="." method="_on_new_vault_panel_canceled"]
[connection signal="created" from="BlurContainer/NewVaultPanelContainer/NewVaultPanel" to="." method="_on_new_vault_panel_created"]
[connection signal="canceled" from="BlurContainer/EditVaultPanelContainer/EditVaultPanel" to="." method="_on_edit_vault_panel_canceled"]
[connection signal="delete_request" from="BlurContainer/EditVaultPanelContainer/EditVaultPanel" to="." method="_on_edit_vault_panel_delete_request"]
[connection signal="save_request" from="BlurContainer/EditVaultPanelContainer/EditVaultPanel" to="." method="_on_edit_vault_panel_save_request"]
